fix layout jumping

--- a/web/static/css/_layout.scss
+++ b/web/static/css/_layout.scss
@@ -9,6 +9,7 @@ body {
   transform: none;
   transition: transform .33s cubic-bezier(.694, .0482, .335, 1);
   flex-direction: column;
+  flex: 1 1;
 }
 
 .layout-master-header {
