--- a/web/static/css/components/_teaser.scss
+++ b/web/static/css/components/_teaser.scss
@@ -1,7 +1,7 @@
 .teaser {
   display: flex;
   height: 80%;
-  margin: 2rem;
+  padding: 2rem;
   color: $gray;
   text-align: center;
   opacity: .5;
